--- a/firstPage.html
+++ b/firstPage.html
@@ -7,7 +7,7 @@
     <title>나만의 홈페이지 만들기</title>
 </head>
 <body>
-<h1>씨큐브코딩 동탄센터 홈페이지</h1>
+<h1>홈페이지</h1>
 <div>안녕하세요? 나만의 홈페이지 만들기 첫 번째 페이지입니다.</div>
 </body>
 </html>
